fix translate button spacing

--- a/src/app/components/stream/status/status-translate/status-translate.component.scss
+++ b/src/app/components/stream/status/status-translate/status-translate.component.scss
@@ -13,6 +13,7 @@ $translation-color-hover: #9fa5ca;
         text-align: center;
 
         &__link {
+            display: block;
             padding: 5px 5px 0 5px;
         }
     }
